--- a/src/main/webapp/views/add-device.html
+++ b/src/main/webapp/views/add-device.html
@@ -12,46 +12,48 @@
 
     <form class="add-form" name="add-device">
 
-      <select ng-model="addDevice.deviceType">
+      <select ng-model="addDevice.deviceToCreate.deviceTypes[0]">
         <option value="DEVICE">Device</option>
         <option value="SENSOR">Sensor</option>
         <option value="ACTUATOR">Actuator</option>
       </select>
       <label class="form-label">Type:</label>
 
-      <input type="text" placeholder="Id" ng-model="addDevice.deviceId">
+      <input type="text" placeholder="Id" ng-model="addDevice.deviceToCreate.deviceId">
       <label class="form-label">Id:</label>
 
-      <select ng-model="addDevice.hostedBy">
-        <option ng-repeat="option in addDevice.getPlatformsId()" value="{{option.platformId}}">{{option.name}}</option>
+      <select ng-model="addDevice.deviceToCreate.hostedBy">
+        <option ng-repeat="option in addDevice.platformData.platforms" value="{{option.platformId}}">
+          {{option.platformId}}
+        </option>
       </select>
       <label class="form-label">Hosted By:</label>
 
-      <input type="text" placeholder="Location" ng-model="addDevice.location">
+      <input type="text" placeholder="Location" ng-model="addDevice.deviceToCreate.location">
       <label class="form-label">Location:</label>
 
-      <input type="text" placeholder="Name" ng-model="addDevice.name">
+      <input type="text" placeholder="Name" ng-model="addDevice.deviceToCreate.name">
       <label class="form-label">Name:</label>
 
-      <input type="text" placeholder="Hosts" ng-model="addDevice.hosts">
+      <input type="text" placeholder="Hosts" ng-model="addDevice.deviceToCreate.hosts[0]">
       <label class="form-label">Hosts:</label>
 
-      <input type="text" placeholder="For Property" ng-model="addDevice.forProperty">
+      <input type="text" placeholder="For Property" ng-model="addDevice.deviceToCreate.forProperty[0]">
       <label class="form-label">For Property:</label>
 
-      <input type="text" placeholder="Made Actuation" ng-model="addDevice.madeActuation">
+      <input type="text" placeholder="Made Actuation" ng-model="addDevice.deviceToCreate.madeActuation">
       <label class="form-label">Made Actuation:</label>
 
-      <input type="text" placeholder="Implements Procedure" ng-model="addDevice.implementsProcedure">
+      <input type="text" placeholder="Implements Procedure" ng-model="addDevice.deviceToCreate.implementsProcedure">
       <label class="form-label">Implements Procedure:</label>
 
-      <input type="text" placeholder="Observes" ng-model="addDevice.observes">
+      <input type="text" placeholder="Observes" ng-model="addDevice.deviceToCreate.observes[0]">
       <label class="form-label">Observes:</label>
 
-      <input type="text" placeholder="Detects" ng-model="addDevice.detects">
+      <input type="text" placeholder="Detects" ng-model="addDevice.deviceToCreate.detects">
       <label class="form-label">Detects:</label>
 
-      <input type="text" placeholder="Made Observation" ng-model="addDevice.madeObservation">
+      <input type="text" placeholder="Made Observation" ng-model="addDevice.deviceToCreate.madeObservation">
       <label class="form-label">Made Observation:</label>
 
       <hr class="line">
