--- a/src/main/webapp/views/component-view.html
+++ b/src/main/webapp/views/component-view.html
@@ -18,8 +18,8 @@
   <div class="option-device-container">
 
     <div class="option-device"
-         ng-repeat="device in componentView.getDevices()"
-         ng-class="{ 'option-device-active' : componentView.isDeviceSelected(device.id) }"
+         ng-repeat="device in componentView.deviceData.devicesByPlatformId[componentView.platformData.currentPlatform.platformId]"
+         ng-class="{ 'option-device-active' : device.deviceId === componentView.deviceData.currentDevice }"
          ng-click="componentView.selectDevice(device)">
 
       <div class="option-name-container">
@@ -35,46 +35,6 @@
         </div>
       </div>
     </div>
-
-  </div>
-
-</div>
-
-<div class="option-container">
-
-  <div class="option-header">
-    <h3>Service Manager</h3>
-
-    <div class="option-header-right">
-      <div class="square-header-button" title="Add Service" ng-click="componentView.goToAddService()">
-        <span class="glyphicon glyphicon-plus"></span>
-      </div>
-    </div>
-
-  </div>
-
-  <div class="option-device-container">
-
-      <!--
-      <div ng-repeat="device in devCtrl.getDevices()"
-           class="option-device"
-           ng-class="{ 'option-device-active' : devCtrl.isDeviceSelected(device.id) }"
-           ng-click="devCtrl.selectDevice(device)">
-
-        <div class="option-name-container">
-          <span class="option-name">{{device.deviceId}}</span>
-          <br class="jump-line">
-          <span class="option-platform">{{device.hostedBy}}</span>
-        </div>
-
-        <div class="option-buttons-container">
-          <div class="option-device-button"
-               ng-class="{ 'option-device-button-active' : ('id' | routeSegmentParam) == device.deviceId }">
-            <span>+ Info</span>
-          </div>
-        </div>
-      </div>
-    -->
 
   </div>
 
