--- a/src/main/webapp/views/add-maintenance.html
+++ b/src/main/webapp/views/add-maintenance.html
@@ -13,42 +13,26 @@
 
     <form class="add-form" name="add-device">
 
-      <select ng-model="addMaintenance.id">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Deployment Id:</label>
 
-      <select ng-model="addMaintenance.deviceId">
-        <option value="DEVICE">Device</option>
-        <option value="SENSOR">Sensor</option>
-        <option value="ACTUATOR">Actuator</option>
-      </select>
-      <label class="form-label">Device Id:</label>
+      <input type="text" disabled ng-model="addMaintenance.recordToCreate.elementId">
+      <label class="form-label">ElementId:</label>
 
-      <textarea class="text-area" placeholder="description" ng-model="addMaintenance.description"></textarea>
+      <textarea class="text-area" placeholder="description"
+                ng-model="addMaintenance.recordToCreate.description"></textarea>
       <label class="form-label">description:</label>
 
-      <select ng-model="addMaintenance.status">
+      <select ng-model="addMaintenance.recordToCreate.status">
         <option value="PENDING">Pending</option>
         <option value="COMPLETED">Completed</option>
       </select>
       <label class="form-label">Status:</label>
 
-      <select ng-model="addMaintenance.type">
+      <select ng-model="addMaintenance.recordToCreate.type">
         <option value="NOTE">Note</option>
         <option value="ISSUE">Issue</option>
         <option value="TODO">Todo</option>
       </select>
       <label class="form-label">Type:</label>
-
-      <div class="info-left">
-        Date:
-      </div>
-      <div class="info-right">
-        {{addMaintenance.date | date: 'dd-MM-yyyy HH:mm:ss'}}
-      </div>
 
       <hr class="line">
 
